[package]
name = "zynk"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
crc32fast = "1.4"
input_handler = "0.1"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12.6"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lsm_vs_hashmap"
harness = false
